productions/veadk/archives/1.0.3/en/changelog.mdx
---
title: "1.0.3 changelog"
zh_link: "/productions/veadk/archives/1.0.3/zh/changelog"
---

This changelog cumulatively lists all public user-facing changes from VeADK 1.0.0 through 1.0.3. Versions are ordered newest first.

## 1.0.3

VeADK 1.0.3 contains the following public user-facing changes.

| Module | Change details | Link |
| :--- | :--- | :--- |
| Knowledge base | Added the `milvus` backend with Milvus service and Milvus Lite URIs, token or username/password authentication, database selection, initialization overwrite, timeout, and additional output fields. | [Store knowledge in Milvus](/productions/veadk/archives/1.0.3/en/components/knowledge/milvus) |
| Knowledge base | Added the `openviking` backend for importing files, directories, and text into OpenViking and retrieving and hydrating results by resource URI. | [Store knowledge in OpenViking](/productions/veadk/archives/1.0.3/en/components/knowledge/openviking) |
| Long-term memory | Added the `openviking` backend to store per-user entity, event, and preference memory while retaining user isolation across sessions. | [Store memory in OpenViking](/productions/veadk/archives/1.0.3/en/components/memory/openviking) |
| A2A | Calls to downstream agents in the AgentKit A2A Registry can propagate inbound `X-Ve-TIP-Token` and bearer JWT credentials. If a downstream call made with the inbound JWT returns `401`, VeADK can fall back to M2M OAuth2 and retry once. | [Inbound authentication](/productions/veadk/archives/1.0.3/en/components/security/inbound) |
| Dependencies | Consolidated duplicate dependency declarations, added the OpenViking SDK to the base dependencies, and added Milvus integrations to `extensions`. | [Installation](/productions/veadk/archives/1.0.3/en/get-started/installation) |

## 1.0.2

VeADK 1.0.2 contains the following public user-facing changes.

| Module | Change details | Link |
| :--- | :--- | :--- |
| Models | Added `MODEL_AGENT_API_KEY_NAME` and `Agent.model_api_key_name` to resolve an Ark API key by name. An explicit key value still has higher precedence. | [Model configuration](/productions/veadk/archives/1.0.2/en/components/agent/model) |
| Short-term memory | Added PostgreSQL `schema` configuration to isolate session tables for separate deployments in one database. VeADK creates a missing schema and pins the connection's `search_path`. | [Store sessions in PostgreSQL](/productions/veadk/archives/1.0.2/en/components/session/postgresql) |
| MCP | After an MCP Server session expires, the service restarts, or the connection drops, VeADK discards the stale session, reconnects, and retries tool discovery or execution once. | [Custom MCP Server](/productions/veadk/archives/1.0.2/en/components/tools/custom-mcp) |
| Frontend | Added a tool OAuth authorization card to VeADK Frontend: it opens the identity provider, accepts the callback, submits the credential, and resumes the original tool call. Also refined the account entry, login page, session list, empty-response notice, and default agent selection. | [VeADK Frontend](/productions/veadk/archives/1.0.2/en/components/frontend/veadk-frontend) |
| Network requests | VeSearch and web-fetch requests use a 30-second timeout so an unresponsive service does not block indefinitely. | [Volcengine search](/productions/veadk/archives/1.0.2/en/components/tools/vesearch) · [Web fetch](/productions/veadk/archives/1.0.2/en/components/tools/web-fetch) |
| Security | Web fetch verifies TLS certificates, and content-safety debug logs do not record API-key values. | [Web fetch](/productions/veadk/archives/1.0.2/en/components/tools/web-fetch) · [Content-safety guardrail](/productions/veadk/archives/1.0.2/en/components/security/content-safety) |

## 1.0.1

VeADK 1.0.1 was released on July 7, 2026. It adds Harness, A2A registration, and ADK skill integration, with updates to the Codex runtime and VeADK Frontend.

| Module | Change details | Link |
| --- | --- | --- |
| Codex runtime | Ships sandbox, network, and review defaults that allow full host and network access without interactive approval. | [Runtime safety](/productions/veadk/archives/1.0.1/en/components/agent/runtime#switch-the-execution-backend) |
| Harness | Adds the VeADK Harness extension to prepare context for each turn, compact large tool results, and verify final answers; Harness initialization also applies the agent description. | [Harness plugins](/productions/veadk/archives/1.0.1/en/components/execution-engine/index#use-harness-execution-enhancements) |
| A2A | Adds Harness A2A registration and corrects its registration behavior. | [Remote-agent discovery](/productions/veadk/archives/1.0.1/en/components/execution-engine/index#discover-remote-agents-from-agentkit) |
| A2A | Adds OAuth authentication to A2A calls. | [A2A authentication](/productions/veadk/archives/1.0.1/en/components/security/outbound#a2a-remote-agent-authentication) |
| Codex runtime | Adds configurable retries for transient backend errors and restores web search through the Responses shim. | [Codex backend requests](/productions/veadk/archives/1.0.1/en/components/agent/runtime#codex-backend-requests) |
| Skills | Adds `VeSkillRegistry` for using SkillHub and Skill Space sources with Google ADK `SkillToolset`; local skills should migrate to ADK `SkillToolset`, while the legacy `Agent(skills=..., skills_mode="local")` entry point remains compatible but is deprecated. | [Cloud skills](/productions/veadk/archives/1.0.1/en/components/agent/skills#use-cloud-skills) |
| VeADK Frontend | Adds gateway authentication mode and a missing-Volcengine-credentials notice during agent creation. | [Frontend authentication](/productions/veadk/archives/1.0.1/en/components/frontend/veadk-frontend#authentication) |
| Codex runtime | Passes agent skills through to the Codex runtime. | [Codex skills and tools](/productions/veadk/archives/1.0.1/en/components/agent/runtime#skills-and-tools-in-the-codex-runtime) |
| Codex runtime | Executes an agent's MCP and function tools through the Codex runtime. | [Codex skills and tools](/productions/veadk/archives/1.0.1/en/components/agent/runtime#skills-and-tools-in-the-codex-runtime) |
| Examples | Adds a Codex-runtime example that combines a local skill with an MCP tool. | [Codex skills and tools](/productions/veadk/archives/1.0.1/en/components/agent/runtime#skills-and-tools-in-the-codex-runtime) |

See the [VeADK 1.0.1 release](https://github.com/volcengine/veadk-python/releases/tag/1.0.1) for the complete published record.

## 1.0.0

VeADK 1.0.0 was released on June 22, 2026. The table follows the public release notes; the published change from 0.5.40 is limited to the documentation entry-point wording.

| Module | Change details | Link |
| --- | --- | --- |
| Documentation | Aligned the Chinese quickstart card with the English card so it explicitly says users can build and run their first agent. | [Quickstart](/productions/veadk/archives/1.0.0/en/get-started/quickstart) |

See the [VeADK 1.0.0 release](https://github.com/volcengine/veadk-python/releases/tag/1.0.0) for the complete published record.
